syntax = "proto3";

package discopanel.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nickheyer/discopanel/pkg/proto/discopanel/v1;discopanelv1";

// Modpack indexing and management
service ModpackService {
  // Query indexed modpacks
  rpc SearchModpacks(SearchModpacksRequest) returns (SearchModpacksResponse);
  // Get modpack details
  rpc GetModpack(GetModpackRequest) returns (GetModpackResponse);
  // Get modpack by slug
  rpc GetModpackBySlug(GetModpackBySlugRequest) returns (GetModpackBySlugResponse);
  // Get modpack by website URL
  rpc GetModpackByURL(GetModpackByURLRequest) returns (GetModpackByURLResponse);
  // Fetch modpacks from external sources
  rpc SyncModpacks(SyncModpacksRequest) returns (SyncModpacksResponse);
  // Import local modpack file
  rpc UploadModpack(UploadModpackRequest) returns (UploadModpackResponse);
  // Remove indexed modpack
  rpc DeleteModpack(DeleteModpackRequest) returns (DeleteModpackResponse);
  // Mark modpack as favorite
  rpc ToggleFavorite(ToggleFavoriteRequest) returns (ToggleFavoriteResponse);
  // Get favorited modpacks
  rpc ListFavorites(ListFavoritesRequest) returns (ListFavoritesResponse);
  // Check indexer availability
  rpc GetIndexerStatus(GetIndexerStatusRequest) returns (GetIndexerStatusResponse);
  // Get modpack configuration
  rpc GetModpackConfig(GetModpackConfigRequest) returns (GetModpackConfigResponse);
  // List modpack file versions
  rpc GetModpackFiles(GetModpackFilesRequest) returns (GetModpackFilesResponse);
  // List available versions
  rpc GetModpackVersions(GetModpackVersionsRequest) returns (GetModpackVersionsResponse);
  // Sync version files from source
  rpc SyncModpackFiles(SyncModpackFilesRequest) returns (SyncModpackFilesResponse);
}

// Indexed modpack metadata
message IndexedModpack {
  string id = 1;
  string indexer_id = 2;
  string indexer = 3;
  string name = 4;
  string slug = 5;
  string summary = 6;
  string description = 7;
  string logo_url = 8;
  string website_url = 9;
  int32 download_count = 10;
  string categories = 11; // JSON array
  string game_versions = 12; // JSON array
  string mod_loaders = 13; // JSON array
  string latest_file_id = 14;
  google.protobuf.Timestamp date_created = 15;
  google.protobuf.Timestamp date_modified = 16;
  google.protobuf.Timestamp date_released = 17;
  string mc_version = 18;
  int32 java_version = 19;
  string docker_image = 20;
  int32 recommended_ram = 21;
  bool is_favorited = 22;
}

// Modpack version file
message ModpackFile {
  string id = 1;
  string modpack_id = 2;
  string display_name = 3;
  string file_name = 4;
  google.protobuf.Timestamp file_date = 5;
  int64 file_length = 6;
  string release_type = 7;
  string download_url = 8;
  repeated string game_versions = 9;
  int32 sort_index = 10;
}

// Modpack search filters
message SearchModpacksRequest {
  string query = 1;
  string game_version = 2;
  string mod_loader = 3;
  string indexer = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// Paginated search results
message SearchModpacksResponse {
  repeated IndexedModpack modpacks = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Modpack lookup
message GetModpackRequest {
  string id = 1;
}

// Single modpack details
message GetModpackResponse {
  IndexedModpack modpack = 1;
}

// Slug lookup
message GetModpackBySlugRequest {
  string slug = 1;
}

// Slug lookup response (modpack may be null if not found)
message GetModpackBySlugResponse {
  IndexedModpack modpack = 1;
}

// URL lookup
message GetModpackByURLRequest {
  string url = 1;
}

// URL lookup response (modpack may be null if not found)
message GetModpackByURLResponse {
  IndexedModpack modpack = 1;
}

// External modpack sync parameters
message SyncModpacksRequest {
  string query = 1;
  string game_version = 2;
  string mod_loader = 3;
  string indexer = 4; // "fuego" or "modrinth"
}

// Sync operation result
message SyncModpacksResponse {
  int32 synced_count = 1;
  string message = 2;
}

// Local modpack import
message UploadModpackRequest {
  string filename = 1;
  bytes content = 2;
  string name = 3;
  string description = 4;
}

// Import result
message UploadModpackResponse {
  IndexedModpack modpack = 1;
  string message = 2;
}

// Modpack to delete
message DeleteModpackRequest {
  string id = 1;
}

// Deletion confirmation
message DeleteModpackResponse {
  string message = 1;
}

// Favorite toggle target
message ToggleFavoriteRequest {
  string id = 1;
}

// Favorite status
message ToggleFavoriteResponse {
  bool is_favorited = 1;
  string message = 2;
}

// Empty favorites request
message ListFavoritesRequest {}

// Favorited modpacks
message ListFavoritesResponse {
  repeated IndexedModpack modpacks = 1;
}

// Empty status request
message GetIndexerStatusRequest {}

// Indexer system status
message GetIndexerStatusResponse {
  map<string, bool> indexers_available = 1;
  int32 total_modpacks = 2;
  map<string, int32> modpacks_by_indexer = 3;
}

// Config lookup
message GetModpackConfigRequest {
  string id = 1;
}

// Modpack configuration
message GetModpackConfigResponse {
  map<string, string> config = 1;
}

// Files lookup
message GetModpackFilesRequest {
  string id = 1;
}

// Available files list
message GetModpackFilesResponse {
  repeated ModpackFile files = 1;
}

// Modpack version info
message Version {
  string id = 1;
  string display_name = 2;
  string release_type = 3;
  google.protobuf.Timestamp file_date = 4;
  int32 sort_index = 5;
  string version_number = 6;
}

// Version filter parameters
message GetModpackVersionsRequest {
  string id = 1;
  string game_version = 2;
  string mod_loader = 3;
}

// Available versions
message GetModpackVersionsResponse {
  repeated Version versions = 1;
}

// Files sync target
message SyncModpackFilesRequest {
  string id = 1;
}

// Files sync result
message SyncModpackFilesResponse {
  int32 synced_count = 1;
  string message = 2;
}
